--- a/public/createVideo.html
+++ b/public/createVideo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
   <div class="video-area">
-    <p>视频播放区域</p>
+    <!-- <p>视频播放区域</p> -->
     <canvas id="drawArea" width="2880" height="1800" style="width: 1440px;height: 900px;"></canvas>
   </div>
   <script type="text/javascript">
