--- a/public/rrwebVideo.html
+++ b/public/rrwebVideo.html
@@ -14,7 +14,7 @@
     fetch('/mock/pageUrl').then(res => {
       res.json().then(data => {
         events = data.data
-        replay()
+        // replay()
       })
     }).catch(err => {
       console.log(err)
