截屏转化视频

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
     <p>
       <label>备注</label><textarea class="textarea-cls"></textarea>
     </p>
+    <div style="background: #ff0;height: 200px;"></div>
+    <div style="background: #f00;height: 200px"></div>
+    <div style="background: #000;height: 200px"></div>
+    <div style="background: #0f0;height: 200px"></div>
+    <div style="background: #00f;height: 200px"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/rrweb@latest/dist/rrweb.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/rrweb-player@latest/dist/index.js"></script>
